@@ -1,3 +1,8 @@
+Mon Feb  9 02:04:03 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c (inspect_peercred): struct ucred contains
+	  effective uid/gid.
+
 Mon Feb  9 00:44:45 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/option.c (sockopt_inspect): add ifdef guard for
